--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,10 @@ edition = "2024"
 
 [dependencies]
 config = "0.15.19"
+serde = { version = "1.0.228", features = ["derive"] }
 tokio = "1.48.0"
 tracing = "0.1.41"
+tracing-subscriber = "0.3.20"
 
 [dev-dependencies]
 cargo-husky = "1.5.0"
