✨ feat: integrate Telegram client with authentication support
Add grammers-client integration to enable Telegram API access with full authentication flow including 2FA support. This establishes the foundation for subscribing to and reading messages from Telegram channels.

- Add grammers-client, grammers-session, and grammers-mtsender dependencies
- Add Telegram API configuration (api_id, api_hash, session_file)
- Create TgFeedService with client initialization and authorization flow
- Add prompt utility for interactive user input during auth
- Make Repo cloneable for service integration

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,10 @@ config = "0.15.19"
 tracing = { workspace = true }
 serde = { workspace = true }
 tokio = { workspace = true }
+grammers-client = "0.8.1"
+grammers-session = "0.8.0"
+anyhow = "1.0.100"
+grammers-mtsender = "0.8.1"
 
 [dev-dependencies]
 cargo-husky = { version = "1.5.0", features = ["user-hooks"] }
