--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ members = ["tgfeed-repo"]
 
 [workspace.dependencies]
 serde = { version = "1.0.228", features = ["derive"] }
-tokio = "1.48.0"
+tokio = { version = "1.48.0", features = ["signal"] }
 tracing = "0.1.41"
 thiserror = "2.0.17"
 chrono = { version = "0.4.42", features = ["serde"] }
@@ -27,6 +27,7 @@ grammers-client = "0.8.1"
 grammers-session = "0.8.0"
 anyhow = "1.0.100"
 grammers-mtsender = "0.8.1"
+chrono = { workspace = true }
 
 [dev-dependencies]
 cargo-husky = { version = "1.5.0", features = ["user-hooks"] }
