♻️ refactor: integrate bot and monitor services in main orchestrator
Refactor main application to orchestrate bot and monitor services using async channels for communication. Remove old monolithic service implementation in favor of modular crate-based architecture.

Changes:
- Replace single TgFeedService with separate bot and monitor services
- Add MPSC channel for bot-to-monitor command communication
- Implement graceful shutdown with Ctrl+C signal handling
- Update configuration to support bot and monitor configs
- Remove deprecated service handlers and utilities

--- a/Settings.toml.sample
+++ b/Settings.toml.sample
@@ -1,9 +1,13 @@
 server_addr = "0.0.0.0:8080"
 healthcheck_addr = "0.0.0.0:8081"
 
+[monitor_config]
 api_id = 123456
 api_hash = "your_api_hash_here"
 session_file = "session.sqlite"
+
+[bot_config]
+token = "your_bot_token_here"
 
 [repo_config]
 connection_string = "mongodb://127.0.0.1:27017"
