✨ feat: add user-scoped subscriptions with event-based message forwarding
Implement per-user subscription tracking and automatic message forwarding from monitored channels to subscribed users.

Key changes:
- Add BotEvent system for monitor-to-bot communication
- Switch subscriptions from global to per-user (user_id scoped)
- Implement message forwarding handler in bot
- Migrate grammers dependencies to git version for latest updates
- Add repository methods for user-specific subscription queries
- Improve error handling with NotFound and EmptyHandle variants
- Update command handlers to pass user_id context

Technical details:
- New event channel (event_tx/event_rx) for monitor → bot events
- Repo now tracks (user_id, channel_id) pairs instead of just channel_id
- Bot spawns background task to handle incoming channel messages
- Messages formatted with MarkdownV2 and channel attribution

--- a/tgfeed-monitor/Cargo.toml
+++ b/tgfeed-monitor/Cargo.toml
@@ -6,9 +6,9 @@ edition = "2024"
 [dependencies]
 thiserror = { workspace = true }
 serde = { workspace = true }
-grammers-client = "0.8.1"
-grammers-session = "0.8.0"
-grammers-mtsender = "0.8.1"
+grammers-client = { git = "https://github.com/Lonami/grammers.git" }
+grammers-session = { git = "https://github.com/Lonami/grammers.git" }
+grammers-mtsender = { git = "https://github.com/Lonami/grammers.git" }
 tgfeed-repo = { workspace = true }
 tokio = { workspace = true }
 tracing = { workspace = true }
