--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,9 @@ path = "./tgfeed-repo"
 [workspace.dependencies.tgfeed-common]
 path = "./tgfeed-common"
 
+[workspace.dependencies.tgfeed-monitor]
+path = "./tgfeed-monitor"
+
 [dependencies]
 anyhow = "1.0.100"
 tracing-subscriber = "0.3.20"
@@ -29,9 +32,7 @@ serde = { workspace = true }
 tokio = { workspace = true }
 tgfeed-repo = { workspace = true }
 tgfeed-common = { workspace = true }
-
-[dependencies.tgfeed-monitor]
-path = "./tgfeed-monitor"
+tgfeed-monitor = { workspace = true }
 
 [dependencies.tgfeed-bot]
 path = "./tgfeed-bot"
