--- a/tgfeed-bot/Cargo.toml
+++ b/tgfeed-bot/Cargo.toml
@@ -10,3 +10,4 @@ thiserror = { workspace = true }
 tgfeed-common = { workspace = true }
 tracing = { workspace = true }
 tokio = { workspace = true }
+tgfeed-repo = { workspace = true }
