⚡ perf: improve message delivery reliability with retry logic
Add exponential backoff retry mechanism for bot message sending with
30-second timeout and enable catch-up mode in monitor to prevent
missed updates during connection issues.

--- a/tgfeed-bot/Cargo.toml
+++ b/tgfeed-bot/Cargo.toml
@@ -11,3 +11,4 @@ tgfeed-common = { workspace = true }
 tracing = { workspace = true }
 tokio = { workspace = true }
 tgfeed-repo = { workspace = true }
+retrier = { workspace = true }
