--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ tracing = "0.1.41"
 thiserror = "2.0.17"
 chrono = { version = "0.4.42", features = ["serde"] }
 futures = "0.3.31"
+retrier = "0.2.0"
 
 [workspace.dependencies.tgfeed-repo]
 path = "./tgfeed-repo"
