✨ feat: add user-based rate limiting for bot commands
Implements rate limiting to prevent command spam and API abuse. Uses the governor crate with per-user keyed rate limiters.

- Add governor dependency for rate limiting
- Create RateLimiters struct with general command limiter (1/sec) and summarize limiter (1/hour)
- Integrate rate limiters into command handler with user-friendly feedback
- Move shared Telegram dependencies to workspace for consistency
- Remove obsolete TODO comment about channel_id migration

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,11 @@ thiserror = "2.0.17"
 chrono = { version = "0.4.42", features = ["serde"] }
 futures = "0.3.31"
 retrier = "0.2.0"
+teloxide = { version = "0.17.0", features = ["macros"] }
+grammers-client = { git = "https://github.com/Lonami/grammers.git" }
+grammers-session = { git = "https://github.com/Lonami/grammers.git" }
+grammers-mtsender = { git = "https://github.com/Lonami/grammers.git" }
+grammers-tl-types = { git = "https://github.com/Lonami/grammers.git" }
 
 [workspace.dependencies.tgfeed-repo]
 path = "./tgfeed-repo"
