--- a/tgfeed-monitor/Cargo.toml
+++ b/tgfeed-monitor/Cargo.toml
@@ -15,3 +15,4 @@ tracing = { workspace = true }
 tgfeed-common = { workspace = true }
 chrono = { workspace = true }
 sqlite = { version = "0.37.0", default-features = false }
+tgfeed-ai = { workspace = true }
