🐛 fix: improve Claude API error handling and localization
- Add API version header for Claude API compliance
- Add comprehensive error handling with status checks
- Add tracing for better debugging of API errors
- Localize summary prompt to Russian
- Add tracing dependency to tgfeed-ai

--- a/tgfeed-ai/Cargo.toml
+++ b/tgfeed-ai/Cargo.toml
@@ -8,3 +8,4 @@ thiserror = { workspace = true }
 reqwest = { workspace = true }
 serde = { workspace = true }
 chrono = { workspace = true }
+tracing = { workspace = true }
