♻️ refactor: migrate to native entity formatting
- Replace HTML escaping with Telegram native entities
- Add entity conversion utilities from grammers to teloxide
- Preserve formatting (bold, italic, links, etc.) in forwarded messages
- Fix message composition to use entity-based formatting
- Increase subscription limit to 30 per user

--- a/tgfeed-bot/Cargo.toml
+++ b/tgfeed-bot/Cargo.toml
@@ -11,4 +11,5 @@ tgfeed-common = { workspace = true }
 tracing = { workspace = true }
 tokio = { workspace = true }
 retrier = { workspace = true }
+reqwest = { workspace = true }
 governor = "0.10.2"
