🗃️ chore: add database indexes for performance and data integrity

--- a/tgfeed-repo/Cargo.toml
+++ b/tgfeed-repo/Cargo.toml
@@ -10,3 +10,4 @@ bson = { version = "2.15", features = ["chrono-0_4"] }
 serde = { workspace = true }
 thiserror = { workspace = true }
 futures = { workspace = true }
+tracing = { workspace = true }
