✨ feat: add advertisement filter for channel messages
Filter out advertising messages containing #реклама hashtag or ERID tokens before storing and forwarding to subscribers.

Features:
- Case-insensitive pattern matching for #реклама
- ERID token detection with flexible separators (:, =, space)
- Boundary checking to avoid false positives
- Minimum 8-character token length requirement
- Optimized regex with OnceLock for lazy initialization

Tests:
- 21 comprehensive test cases covering positive and negative scenarios
- Real-world examples validation
- Edge cases for word boundaries and token formats

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ futures = "0.3.31"
 retrier = "0.2.0"
 teloxide = { version = "0.17.0", features = ["macros"] }
 reqwest = "0.12.24"
+regex = "1.11.1"
 grammers-client = { git = "https://github.com/Lonami/grammers.git" }
 grammers-session = { git = "https://github.com/Lonami/grammers.git" }
 grammers-mtsender = { git = "https://github.com/Lonami/grammers.git" }
