♻️ refactor: extract bot handlers and responses into separate modules

--- a/tgfeed-bot/Cargo.toml
+++ b/tgfeed-bot/Cargo.toml
@@ -4,9 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+anyhow = { workspace = true }
 serde = { workspace = true }
 teloxide = { workspace = true }
-thiserror = { workspace = true }
 tgfeed-common = { workspace = true }
 tracing = { workspace = true }
 tokio = { workspace = true }
