--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ members = [
 ]
 
 [workspace.dependencies]
+anyhow = "1.0.100"
 serde = { version = "1.0.228", features = ["derive"] }
 tokio = { version = "1.48.0", features = ["signal"] }
 tracing = "0.1.41"
@@ -41,7 +42,7 @@ path = "./tgfeed-monitor"
 path = "./tgfeed-ai"
 
 [dependencies]
-anyhow = "1.0.100"
+anyhow = { workspace = true }
 tracing-subscriber = "0.3.20"
 config = "0.15.19"
 tracing = { workspace = true }
